# spotify-mcp

./: .env  .gitignore  auth_server_standalone.py  pyproject.toml  server.py  spotify_test.py  test_spotify_auth.py
data/: tokens.json
spotify/: __init__.py  auth.py  client.py  constants.py  devices.py  playback.py  resources.py  search.py  tools.py
